<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/gotoicon"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_format_list"
            android:title="@string/menu_todo"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/settingsicon"
            android:title="@string/menu_slideshow" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group2ID">
        <item android:id="@+id/nav_info"
            android:icon="@drawable/infoicon"
            android:title="@string/menu_info"/>
    </group>
</menu>
