<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sib4u.dinlipi.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.sib4u.dinlipi.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sib4u.dinlipi.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_todo"
        android:name="com.sib4u.dinlipi.ToDo"
        android:label="@string/menu_todo"
        tools:layout="@layout/fragment_to_do" />
    <fragment
        android:id="@+id/nav_info"
        android:name="com.sib4u.dinlipi.NavInfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_nav_info" />
</navigation>