<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/BackgroundColor"
    android:gravity="center_horizontal"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:targetApi="lollipop">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/headershape"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/nav_header_desc"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/appimage"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textColor="?attr/white"
            android:text="@string/nav_header_title"
            android:fontFamily="monospace"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/white"
            android:text="@string/nav_header_subtitle"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
    <Space
        android:layout_width="0dp"
        android:layout_height="10dp"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:background="?attr/BackgroundColor"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <EditText
            android:id="@+id/usernameID"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/edittextshape"
            android:drawableStart="@drawable/user_icon"
            android:ems="10"
            android:hint="User Name"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="?attr/HomeText1"
            android:textColorHint="?attr/HintTextColor"
            />
    <EditText
            android:id="@+id/passwordID"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextshape"
            android:drawableStart="@drawable/lock_icon"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="5dp"
            android:textColor="?attr/HomeText1"
            android:textColorHint="?attr/HintTextColor"
            />
    <Button
        android:background="@drawable/buttonshape"
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="?attr/white"
        android:layout_marginTop="10dp"
        android:text="Open" />
</LinearLayout>

</LinearLayout>